[package]
name = "tinywx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "3.2"
reqwest = { version = "0", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
toml = "0.5"
wx = { path = "./wx" }
